--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,7 +6,9 @@
     "d3": "^3.5.17",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-scripts": "^0.9.5"
+    "react-mixin": "^3.0.5",
+    "react-scripts": "^0.9.5",
+    "react-timer-mixin": "^0.13.3"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
